Fix dark mode

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ textarea {
     border: none;
     outline: none;
     background: inherit;
+    color: inherit;
     font-family: inherit;
     font-size: inherit;
     resize: none;
